# pyscripts

./: .gitignore  dashboard.py  editor.py  editor.sh  main.py  post_history.json  pyproject.toml  twitt.py  urls.json  wallhaven.py  web.py  web.sh  yt.sh  ytdown.py
.github/workflows/: bot.yml
