[project]
name = "pyautomation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "atproto>=0.0.65",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "groq>=1.1.2",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "rich>=14.3.3",
    "yt-dlp>=2026.3.17",
]
